# Text-Mining

./: .gitignore  AUTHORS  CMakeLists.txt  README
app/: CMakeLists.txt  backtrack_levenshtein.cc  backtrack_levenshtein.hh  main.cc
compiler/: CMakeLists.txt  main.cc
trie/: trie.cc  trie.hh
